<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_openGallery"
        app:showAsAction="never"
        android:title="@string/action_OpenGallery"/>
    <item
        android:id="@+id/action_detectText"
        app:showAsAction="never"
        android:title="@string/action_DetectText"/>
    <item
        android:id="@+id/action_detectTextTesseract"
        app:showAsAction="never"
        android:title="@string/action_DetectTextTesseract"/>
    <item
        android:id="@+id/action_labelImage"
        app:showAsAction="never"
        android:title="@string/action_LabelImage"/>
    <item
        android:id="@+id/action_detectObjects"
        app:showAsAction="never"
        android:title="@string/action_DetectObjects"/>
    <item
        android:id="@+id/action_barCode"
        app:showAsAction="never"
        android:title="@string/action_BarCode"/>
</menu>